--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -32,8 +32,11 @@ jobs:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.PAT }} # Or use GITHUB_TOKEN for public repos
-
-      - name: Build and push the Docker image
-        run: |
-          ./mvnw spring-boot:build-image -Dspring-boot.build-image.imageName=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
-          docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+      
+	  - name: Build and push Docker image
+		uses: docker/build-push-action@v6
+		with:
+		  context: .
+		  push: true
+		  tags: ghcr.io/${{ github.repository }}:latest
+		  platforms: linux/amd64,linux/arm64
