--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -11,7 +11,7 @@ env:
   GKE_ZONE: asia-east1-a # e.g., us-central1-c
   
   # GHCR image details
-  GHCR_IMAGE: ${{env.REGISTRY}}/${{ github.repository }}
+  GHCR_IMAGE: ghcr.io/${{ github.repository }}
   GHCR_IMAGE_TAG: ${{ github.sha }}
 
 jobs:
