--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -47,6 +47,12 @@ jobs:
           push: true
           tags: ${{ env.GHCR_IMAGE }}:${{ env.GHCR_IMAGE_TAG }}
 
+      - id: 'auth'
+        name: 'Authenticate to Google Cloud'
+        uses: 'google-github-actions/auth@v2'
+        with:
+          workload_identity_provider: 'projects/183944825075/locations/global/workloadIdentityPools/github-pool/providers/github-provider'
+          service_account: '183944825075-compute@developer.gserviceaccount.com'
 
       - name: Get GKE credentials
         uses: google-github-actions/get-gke-credentials@v2
