--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -57,7 +57,7 @@ jobs:
         name: 'Authenticate to Google Cloud'
         uses: 'google-github-actions/auth@v2'
         with:
-          workload_identity_provider: 'projects/183944825075/locations/global/workloadIdentityPools/github-p/subject/repo:sures-g/sample-test-api:ref:refs/heads/main'
+          workload_identity_provider: 'projects/183944825075/locations/global/workloadIdentityPools/github-p/providers/github-p'
           service_account: 'github-actions-sa@for-tech-practice.iam.gserviceaccount.com'
 
       - name: Get GKE credentials
