--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -62,6 +62,6 @@ jobs:
 
       - name: Deploy to GKE
         run: |
-         kubectl apply -f k8s/
+         kubectl apply -f k8s/deployment.yml --validate=false
          kubectl set image deployment/sample-test-api sample-container=${{ env.GHCR_IMAGE }}:${{ env.GHCR_IMAGE_TAG }}
          
