--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -60,12 +60,16 @@ jobs:
           workload_identity_provider: 'projects/183944825075/locations/global/workloadIdentityPools/github-p/providers/github'
           service_account: 'github-actions-sa@for-tech-practice.iam.gserviceaccount.com'
 
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@v2
+
       - name: Deploy to GKE
         run: |
          gcloud container clusters get-credentials sample-test --region asia-east1 --project for-tech-practice
          
       - name: Deploy to GKE
         run: |
-         kubectl apply -f deployment.yml --validate=false
+         sed -i "s|image: .*|image: ${{ env.GHCR_IMAGE }}:${{ GHCR_IMAGE_TAG }}|" k8s/deployment.yaml
+         kubectl apply -f k8s/deployment.yml --validate=false
          kubectl set image deployment/sample-test-api sample-container=${{ env.GHCR_IMAGE }}:${{ env.GHCR_IMAGE_TAG }}
          
