--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -3,7 +3,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: ghcr-app-deployment
+  name: sample-test-api
   labels:
     app: sample-test-api
 spec:
