--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -22,6 +22,6 @@ spec:
         image: ghcr.io/sures-g/sample-test-api:latest
         ports:
         - containerPort: 8080
-      # This is where you reference the secret
+      # This is where you reference the secret1
       imagePullSecrets:
       - name: ghcr-pull-secret
